--- a/dashboard/src/layouts/thirdbar.scss
+++ b/dashboard/src/layouts/thirdbar.scss
@@ -1,12 +1,13 @@
-.secondbar {
+.thirdbar {
     width: 100%;
-    height: 50px;
-    margin-bottom: 10px;
+    height: 40px;
+    margin-bottom: 0px;
     z-index: 150;
 
     .box {
-        padding-top: 8px;
+        padding-top: 0px;
         padding-left: 1.5%;
+        padding-right: 1.5%;
 
         ul {
             list-style: none;
@@ -15,11 +16,12 @@
             width: auto;
             height: 40px;
             display: flex;
-            gap: 1.3%;
+            justify-content: center;
+            gap: 0.5%;
 
             li {
                 height: auto;
-                width: 32%;
+                width: 16%;
                 display: flex;
                 align-items: center;
                 flex-direction: row;
@@ -38,25 +40,38 @@
                     transform: scale(1.02);
                     z-index: 170;
 
-                    
+
                 }
+
+                
 
                 
 
                 span {
-                    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-                        "Lucida Sans", Arial, sans-serif;
+
                     margin-left: 10px;
                     color: #201f67;
-                    font-size: 15px;
                     font-style: normal;
                     font-weight: bold;
+                    font-size: 15px;
+                            font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+                                "Lucida Sans", Arial, sans-serif;
+                            
+                                &:hover {
+                                    cursor: pointer;
+                                    color: #5662cc;
+                                    fill: #5662cc;
+                                    transform: scale(1.02);
+                                    z-index: 170;
+                
+                                    
+                                }
                 }
 
                 
-                    
-                
+                     
             }
+            
         }
     }
 }
