--- a/dashboard/src/pages/RateSubPages/HourlyRate.scss
+++ b/dashboard/src/pages/RateSubPages/HourlyRate.scss
@@ -1,3 +1,16 @@
+@keyframes blink {
+    0% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    //   background-color: #fa04044b;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
 .hourly-rate-page {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -14,7 +27,7 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
         overflow: hidden;
         width:98%;
-        height:180px;
+        height:170px;
         cursor: pointer !important;
 
         &:hover {
@@ -36,6 +49,13 @@
                 height: 20px;
                 width: 20px;
                 border-radius: 10px;
+            }
+            .ESmachine{
+                height: 20px;
+                width: 20px;
+                border-radius: 10px;
+                animation: blink 1s infinite;
+
             }
         }
 
