--- a/dashboard/src/components/Statuspage/statuspage.css
+++ b/dashboard/src/components/Statuspage/statuspage.css
@@ -104,6 +104,10 @@
     transform: scale(1.01);
 }
 
+.carderror:hover {
+    transform: scale(1.01);
+}
+
 .statu {
     height: 20px;
     cursor: default;
