--- a/dashboard/src/components/Statuspage/statuspage.css
+++ b/dashboard/src/components/Statuspage/statuspage.css
@@ -131,17 +131,19 @@
     justify-content: space-between;
     padding-left: 10px;
     width: 100%;
+    /* border: 1px solid #000000; */
     /*98%*/
 }
 
 .bodyrow {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content:flex-start;
     width: 100%;
     /*98%*/
-    border-radius: 10px;
-    padding-top: 5px;
+    padding: 10px;
+    /* border: 1px solid #000000; */
 
 }
 
