--- a/dashboard/src/pages/RateSubPages/HourlyRate.scss
+++ b/dashboard/src/pages/RateSubPages/HourlyRate.scss
@@ -1,10 +1,8 @@
-
-
 .hourly-rate-page {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-row-gap: 12px;
-    grid-column-gap:10px;
+    grid-column-gap: 10px;
     padding: 10px;
     flex-grow: 1;
     // margin-left: 70px;
@@ -15,8 +13,8 @@
         border-radius: 15px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
         overflow: hidden;
-        width:98%;
-        height:170px;
+        width: 98%;
+        height: 170px;
         cursor: pointer !important;
 
         &:hover {
@@ -24,13 +22,13 @@
         }
 
         .status {
-            
+
             display: flex;
             justify-content: space-between;
             flex-direction: column;
             width: 98% !important;
             height: 1% !important;
-            padding-top: 5px ;
+            padding-top: 5px;
             padding-right: 5px;
             padding-left: 5px;
 
@@ -39,18 +37,22 @@
                 width: 20px;
                 border-radius: 10px;
             }
+
             @keyframes blink-p {
                 0% {
-                  opacity: 1;
+                    opacity: 1;
                 }
+
                 50% {
-                  opacity: 0;
+                    opacity: 0;
                 }
+
                 100% {
-                  opacity: 1;
+                    opacity: 1;
                 }
-              }
-            .ESmachine{
+            }
+
+            .ESmachine {
                 height: 20px;
                 width: 20px;
                 border-radius: 10px;
@@ -60,14 +62,26 @@
         }
 
         .Rchart-container {
-           
-            width: 100%;
-            height: 84%;
-            margin-top: 5%;
+
+            width: 78%;
+            height: 80%;
+            margin-top: 6%;
             margin-left: -2%;
             cursor: pointer !important;
         }
 
+        .right-side-info {
+            // display: flex;
+            // flex-direction: column;
+            // justify-content: flex-start;
+            // align-items: flex-end;
+            margin-left: 260px;
+            margin-top: -140px;
+            scale: 0.8;
+            /* Adjust the width as needed to fit the blank space */
+        }
+
+       
         .popup {
             display: none;
             position: absolute;
@@ -85,9 +99,44 @@
         &:hover .popup {
             display: block;
         }
+.progress-bar-container {
+    margin-top: -8px;
+}
+
+        // .progress-bar-container {
+        //     width: 90%;
+        //     background-color: grey;
+        //     border-radius: 5px;
+        //     margin-top: 1px;
+        //     position: relative;
+        //     height: 10px;
+        // }
+
+        // .progress-bar {
+        //     background-color: #07c236;
+        //     height: 100%;
+        //     border-radius: 5px;
+        //     transition: width 0.3s ease-in-out;
+
+
+        // }
+
+        // .progress-label {
+        //     position: absolute;
+        //     right: -39px;
+        //     top: -20px;
+        //     font-size: 18px;
+        //     background-color: #4caf50;
+        //     /* Choose a color that contrasts with the background */
+        //     color: white;
+        //     padding: 3px;
+
+        // }
+
+
     }
 
-   
+
 
     .central-block {
         position: absolute;
@@ -107,20 +156,20 @@
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 
         &.operating {
-                background-color: #ccffcc; // Light green
-                color: green;
-            }
-        
-            &.stuck {
-                background-color: #ffcccc; // Light red
-                color: red;
-            }
-        
-            &.stopped {
-                background-color: #d9d9d9; // Light grey
-                color: grey;
-            }
-            
+            background-color: #ccffcc; // Light green
+            color: green;
+        }
+
+        &.stuck {
+            background-color: #ffcccc; // Light red
+            color: red;
+        }
+
+        &.stopped {
+            background-color: #d9d9d9; // Light grey
+            color: grey;
+        }
+
         .status {
             display: flex;
             flex-direction: column;
@@ -131,7 +180,7 @@
             text-align: center;
             border-radius: 3px;
             margin-bottom: 10px;
-            height:300px;
+            height: 300px;
 
             &.operating {
                 background-color: green;
@@ -150,9 +199,9 @@
 
             .Rmachine-number {
                 font-size: 18px;
-                font-weight: bold; 
+                font-weight: bold;
                 margin-bottom: 10px;
-                text-align: center; 
+                text-align: center;
             }
         }
 
@@ -161,21 +210,21 @@
             height: 100%;
         }
 
-                 // Progress bar container
-                 .progress-bar-container {
-                     width: 90%;
-                     margin: 10px auto;
-                     height: 8px;
-                     background-color: #e0e0e0;
-                     border-radius: 4px;
-                     overflow: hidden;
-        
-                     .progress-bar {
-                         height: 100%;
-                         background-color: #77ccee; // Set color to represent the status or progress
-                         transition: width 0.5s ease; // Smooth transition for progress updates
-                     }
-                 }
+        // Progress bar container
+        .progress-bar-container {
+            width: 90%;
+            margin: 10px auto;
+            height: 8px;
+            background-color: #e0e0e0;
+            border-radius: 4px;
+            overflow: hidden;
+
+            .progress-bar {
+                height: 100%;
+                background-color: #77ccee; // Set color to represent the status or progress
+                transition: width 0.5s ease; // Smooth transition for progress updates
+            }
+        }
 
         .additional-info {
             margin-top: 20px;
@@ -198,7 +247,7 @@
 
             detail-item {
                 margin-bottom: 12px;
-                
+
 
                 &.product {
                     font-size: 16px;
@@ -214,7 +263,7 @@
 
                 &.machine-type,
                 &.hours-active {
-                    font-weight: bold; 
+                    font-weight: bold;
                     font-size: 14px;
                     color: #777;
                     line-height: 1.5;
@@ -222,5 +271,5 @@
             }
         }
     }
-}
 
+}
