--- a/dashboard/src/pages/RateSubPages/HourlyRate.scss
+++ b/dashboard/src/pages/RateSubPages/HourlyRate.scss
@@ -65,23 +65,20 @@
 
             width: 78%;
             height: 80%;
-            margin-top: 6%;
+            margin-top: 9%;
             margin-left: -2%;
             cursor: pointer !important;
         }
 
-        .right-side-info {
-            // display: flex;
-            // flex-direction: column;
-            // justify-content: flex-start;
-            // align-items: flex-end;
-            margin-left: 260px;
-            margin-top: -140px;
-            scale: 0.8;
-            /* Adjust the width as needed to fit the blank space */
+        .rate-rate {
+            font-size: 11px;
+            margin-left: 10%;
+            text-align: center;
+            padding: 2px 0 4px 4px;
+    
         }
 
-       
+
         .popup {
             display: none;
             position: absolute;
@@ -99,177 +96,16 @@
         &:hover .popup {
             display: block;
         }
-.progress-bar-container {
-    margin-top: -8px;
-}
 
-        // .progress-bar-container {
-        //     width: 90%;
-        //     background-color: grey;
-        //     border-radius: 5px;
-        //     margin-top: 1px;
-        //     position: relative;
-        //     height: 10px;
-        // }
-
-        // .progress-bar {
-        //     background-color: #07c236;
-        //     height: 100%;
-        //     border-radius: 5px;
-        //     transition: width 0.3s ease-in-out;
-
-
-        // }
-
-        // .progress-label {
-        //     position: absolute;
-        //     right: -39px;
-        //     top: -20px;
-        //     font-size: 18px;
-        //     background-color: #4caf50;
-        //     /* Choose a color that contrasts with the background */
-        //     color: white;
-        //     padding: 3px;
-
-        // }
-
-
-    }
-
-
-
-    .central-block {
-        position: absolute;
-        top: 10%;
-        left: 30%;
-        transform: translate(-50%, -50%);
-        border: 2px solid #ccc;
-        border-radius: 10px;
-        padding: 20px;
-        background-color: rgb(233, 217, 231);
-        z-index: 100;
-        width: 800px;
-        height: 800px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-
-        &.operating {
-            background-color: #ccffcc; // Light green
-            color: green;
-        }
-
-        &.stuck {
-            background-color: #ffcccc; // Light red
-            color: red;
-        }
-
-        &.stopped {
-            background-color: #d9d9d9; // Light grey
-            color: grey;
-        }
-
-        .status {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            padding: 10px;
-            text-align: center;
-            border-radius: 3px;
-            margin-bottom: 10px;
-            height: 300px;
-
-            &.operating {
-                background-color: green;
-                color: white;
-            }
-
-            &.stuck {
-                background-color: red;
-                color: white;
-            }
-
-            &.stopped {
-                background-color: grey;
-                color: white;
-            }
-
-            .Rmachine-number {
-                font-size: 18px;
-                font-weight: bold;
-                margin-bottom: 10px;
-                text-align: center;
-            }
-        }
-
-        .Rchart-container {
-            width: 100%;
-            height: 100%;
-        }
-
-        // Progress bar container
         .progress-bar-container {
-            width: 90%;
-            margin: 10px auto;
-            height: 8px;
-            background-color: #e0e0e0;
-            border-radius: 4px;
-            overflow: hidden;
-
-            .progress-bar {
-                height: 100%;
-                background-color: #77ccee; // Set color to represent the status or progress
-                transition: width 0.5s ease; // Smooth transition for progress updates
-            }
+            margin-top: 6px;
+            margin-left: 3px;
         }
 
-        .additional-info {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: rgb(233, 214, 236);
-            border: 1px solid #e0e0e0;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: box-shadow 0.3s ease;
-            letter-spacing: 0.8px;
-            line-height: 1.3;
-
-            &:hover {
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-                font-weight: bold;
-                transition: 0.2s;
-                letter-spacing: 0.8px;
-                line-height: 1.3;
-            }
-
-            detail-item {
-                margin-bottom: 12px;
 
 
-                &.product {
-                    font-size: 16px;
-                    color: #333;
-                    margin-bottom: 8px;
-                }
-
-                &.progress {
-                    font-size: 14px;
-                    color: #666;
-                    line-height: 1.5;
-                }
-
-                &.machine-type,
-                &.hours-active {
-                    font-weight: bold;
-                    font-size: 14px;
-                    color: #777;
-                    line-height: 1.5;
-                }
-            }
-        }
     }
-
 }
+
+
+    
