--- a/dashboard/src/pages/RateSubPages/HourlyRate.scss
+++ b/dashboard/src/pages/RateSubPages/HourlyRate.scss
@@ -64,8 +64,8 @@
         .Rchart-container {
 
             width: 78%;
-            height: 80%;
-            margin-top: 9%;
+            height: 100%;
+            margin-top: 6%;
             margin-left: -2%;
             cursor: pointer !important;
         }
@@ -98,8 +98,9 @@
         }
 
         .progress-bar-container {
-            margin-top: 6px;
-            margin-left: 3px;
+            margin-top: 4px;
+            margin-left: 0px;
+            width: 65%;
         }
 
 
