--- a/dashboard/src/components/SummaryComponents/Boxes/Dropdownbox.scss
+++ b/dashboard/src/components/SummaryComponents/Boxes/Dropdownbox.scss
@@ -5,9 +5,9 @@
   height: 50px;
   top:145px;
   left: 0.5%;
-    
+    z-index: 0;
 
-  background: #f3f2f2;
+  background: none;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
   
 }
