--- a/dashboard/src/layouts/Fourth.scss
+++ b/dashboard/src/layouts/Fourth.scss
@@ -8,7 +8,7 @@
     }
 
     .box {
-        width: 98%;
+        width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -16,7 +16,7 @@
         background-color: #fff;
         box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.534),
             0px 1px 2px rgba(0, 0, 0, 0.05);
-        border-radius: 8px;
+        // border-radius: 8px;
 
 
         .pickers {
