--- a/dashboard/src/pages/RateSubPages/ProductProgress.scss
+++ b/dashboard/src/pages/RateSubPages/ProductProgress.scss
@@ -15,13 +15,14 @@
 .product-card {
     background-color: #fff;
     border: 1px solid #B0BEC5;
+        border: 1px solid #b3e0b3; // Light green border
     border-radius: 8px;
     padding: 40px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
     transition: transform 0.2s ease;
     text-align: center;
     cursor: pointer;
-    height: 380px;
+    height: 425px;
     display: flex;
     flex-direction: column;
     justify-content: center;
