--- a/dashboard/src/pages/RateSubPages/HourlyRate.scss
+++ b/dashboard/src/pages/RateSubPages/HourlyRate.scss
@@ -16,7 +16,7 @@
         width: 98%;
         height: 170px;
         cursor: pointer !important;
-
+        background-color: white;
         &:hover {
             transform: scale(1.01);
         }
