--- a/dashboard/src/components/SummaryComponents/GeneratePDF/GeneratePDFButton.scss
+++ b/dashboard/src/components/SummaryComponents/GeneratePDF/GeneratePDFButton.scss
@@ -1,13 +1,12 @@
-.pdfbutton{
+.pdfbutton_1{
     width: 35px;
-    height: 35px;
+    height: 38px;
     background-color: #fff;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.534);
-
+    margin-bottom: 10px;
     
     &:hover {
         transform: scale(1.05);
-        z-index: 170;
     }
     &:active {
         background-color: #201F67;
